# bazoekt

./: .bazelrc  BUILD.bazel  GEMINI.md  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  run_zoekt_index.sh  run_zoekt_server.sh
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: publish-bcr.yml  publish.yml  release.yml  tag-and-release.yml  test.yml
patches/: BUILD.bazel
test/: BUILD.bazel  deps.go  main.go  main_test.go
