load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("//build:my_package_name.bzl", "name_part_from_command_line")

# bazel run //:gazelle
# bazel run //:gazelle -- update-repos --from_file=go.mod
# gazelle:prefix github.com/filmil/bazoekt
gazelle(name = "gazelle")

# bazel run //:buildifier
buildifier(
    name = "buildifier",
)

# bazel run //:gazelle-update-repos
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%bazoekt_go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

sh_binary(
    name = "index",
    srcs = ["run_zoekt_index.sh"],
    data = [
        "@com_github_google_zoekt//cmd/zoekt-index",
        "@gotopt2//cmd/gotopt2",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

sh_binary(
    name = "serve",
    srcs = ["run_zoekt_server.sh"],
    data = [
        "@com_github_google_zoekt//cmd/zoekt-webserver",
        "@gotopt2//cmd/gotopt2",
    ],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

name_part_from_command_line(
    name = "name_part_from_command_line",
    build_setting_default = "@set_me@",
)

pkg_zip(
    name = "release",
    srcs = [
        ":index",
        ":serve",
        "//build/release:BUILD.bazel",
        "//build/release:WORKSPACE",
        "@com_github_google_zoekt//cmd/zoekt-index",
        "@com_github_google_zoekt//cmd/zoekt-webserver",
        "@gotopt2//cmd/gotopt2",
    ],
    package_dir = "bazoekt",
    package_file_name = "bazoekt-{name_part}.zip",
    package_variables = ":name_part_from_command_line",
)
