module(
    name = "bazoekt",
    version = "0.0.8",
)

bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "29.4")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_python", version = "0.29.0")
bazel_dep(name = "gotopt2", version = "2.2.4")
bazel_dep(name = "buildifier_prebuilt", version = "8.0.1")
bazel_dep(name = "rules_shell", version = "0.6.1")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_zoekt",
)

single_version_override(
    module_name = "gotopt2",
    version = "2.2.4",
    patches = ["//patches:gotopt2_sh_test.patch"],
    patch_strip = 0,
)
