load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "test_lib",
    srcs = ["main.go"],
    importpath = "github.com/filmil/bazoekt/test",
    deps = [
        "@com_github_google_zoekt//:go_default_library",
    ],
    visibility = ["//visibility:private"],
)

go_binary(
    name = "test",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "test_test",
    srcs = ["main_test.go"],
    embed = [":test_lib"],
)
